# rust_cli_book

./: .gitignore  Cargo.toml
calr/: Cargo.toml
calr/src/: lib.rs
calr/tests/: cli.rs
catr/: Cargo.toml
catr/src/: lib.rs
catr/tests/: cli.rs
catr/tests/expected/: the-bustle-skip.txt.b.out  the-bustle-skip.txt.e.out  the-bustle-skip.txt.n.out  the-bustle-skip.txt.s.out
catr/tests/inputs/: the-bustle-skip.txt
commr/: Cargo.toml
commr/src/: lib.rs
cutr/: Cargo.toml
cutr/src/: lib.rs
cutr/tests/: cli.rs
echor/: Cargo.toml  \
echor/src/: main.rs
echor/tests/: cli.rs
findr/: Cargo.toml
findr/src/: lib.rs
findr/tests/: cli.rs
fortuner/: Cargo.toml
fortuner/src/: lib.rs
fortuner/tests/: cli.rs
grepr/: Cargo.toml
grepr/src/: lib.rs
grepr/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs
headr/tests/: cli.rs
tailr/: Cargo.toml  \
tailr/src/: lib.rs
tailr/tests/: cli.rs
uniqr/: Cargo.toml
uniqr/src/: lib.rs
uniqr/tests/: cli.rs
wcr/: Cargo.toml
wcr/src/: lib.rs
