[workspace]
members = [
    "catr",
    "commr",
    "cutr",
    "echor",
    "findr",
    "grepr",
    "headr",
    "tailr",
    "uniqr",
    "wcr",
]
resolver = "2"

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
csv = "1"
nom = "7"
num = "0.4"
once_cell = "1"
predicates = "2"
pretty_assertions = "1"
rand = "0.8"
regex = "1"
strum = { version = "0.25", features = ["derive"] }
sys-info = "0.9"
tempfile = "3"
walkdir = "2"
