[package]
name = "cutr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
csv = { workspace = true }
nom = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
