[package]
name = "findr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
regex = "1"
walkdir = "2"
pretty_assertions = "1.4.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
rand = "0.8"
