[package]
name = "findr"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
strum = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
assert_cmd = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
