[package]
name = "fortuner"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
